WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
236741
Web Inspector: [Flexbox] Gaps and free space do not have pattern fills when navigating to a page with Web Inspector already open
https://bugs.webkit.org/show_bug.cgi?id=236741
Summary
Web Inspector: [Flexbox] Gaps and free space do not have pattern fills when n...
Patrick Angle
Reported
2022-02-16 16:10:09 PST
<
rdar://88995157
>
Attachments
Patch v1.0
(3.69 KB, patch)
2022-02-16 16:19 PST
,
Patrick Angle
no flags
Details
Formatted Diff
Diff
Patch v1.1
(3.97 KB, patch)
2022-02-17 08:56 PST
,
Patrick Angle
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Patrick Angle
Comment 1
2022-02-16 16:19:38 PST
Created
attachment 452269
[details]
Patch v1.0
Devin Rousso
Comment 2
2022-02-16 18:06:29 PST
Comment on
attachment 452269
[details]
Patch v1.0 View in context:
https://bugs.webkit.org/attachment.cgi?id=452269&action=review
r=me, neato :)
> Source/WebCore/inspector/agents/InspectorDOMAgent.cpp:-365 > - m_flexibleBoxRendererCachedItemsAtStartOfLine.clear();
I agree that it's *probably* fine to not clear since it's a `WeakHashSet`, but I am afraid this could easily be proven an incorrect analysis. Would it make sense to clear this inside `relayoutDocument` since we're gonna do a full layout anyways (and therefore probably immediately re-fill `m_flexibleBoxRendererCachedItemsAtStartOfLine`)?
Patrick Angle
Comment 3
2022-02-17 08:56:05 PST
Created
attachment 452376
[details]
Patch v1.1
Patrick Angle
Comment 4
2022-02-17 08:58:45 PST
Comment on
attachment 452269
[details]
Patch v1.0 View in context:
https://bugs.webkit.org/attachment.cgi?id=452269&action=review
>> Source/WebCore/inspector/agents/InspectorDOMAgent.cpp:-365 >> - m_flexibleBoxRendererCachedItemsAtStartOfLine.clear(); > > I agree that it's *probably* fine to not clear since it's a `WeakHashSet`, but I am afraid this could easily be proven an incorrect analysis. Would it make sense to clear this inside `relayoutDocument` since we're gonna do a full layout anyways (and therefore probably immediately re-fill `m_flexibleBoxRendererCachedItemsAtStartOfLine`)?
Good point - I've added it to `relayoutDocument()` since we will be getting the new info anyways.
EWS
Comment 5
2022-02-17 12:06:47 PST
Committed
r290047
(
247419@main
): <
https://commits.webkit.org/247419@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 452376
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug